@@ -8,3 +8,4 @@ glFusion Membership Plugin - Change Log
 - Added a way to disable new-user welcome messages.
 - Add handling for membership numbers
 - Remove member from any positions held upon expiration or cancellation.
+- Enable trial memberships
